refactor: SearchResponse의 각 모델 객체  를 분리시키는 리팩토링 진행